--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               </ul>
             </div>
 
-            <h3 class="resume-title">diplômes Scolaires</h3>
+            <h3 class="resume-title">Diplômes Scolaires</h3>
             <div class="resume-item">
               <h4>BTS SIO (Service Informatique aux Organisations) option SLAM (Solutions Logicielles et Applications Métier</h4>
               <h5>2018 - 2020</h5>
